# OptiCIF

./: CITATION.cff  README.md  pyproject.toml
opticif/: __init__.py  _validators.py  cif_transformer.py  csv_converter.py  csv_utils.py  validator.py  validators.py
tests/: test_csv_conversion.py  test_genetic_sequencing.py  test_global_optimization.py  test_markov_sequencing.py  test_mat_conversion.py  test_seq_and_optimization.py
tests/io/: test_mat_conversion.py  test_plant_groups_conversion.py
tests/models/simple_lock/: simple_lock.edges.csv  simple_lock.groupinfo.mat  simple_lock.groups.nodes.csv  simple_lock.nodes.csv  simple_lock.plants_and_requirements.cif  simple_lock.prodsysmap.txt  simple_lock.scheduleorder.mat  simple_lock_DSM.csv  simple_lock_DSM.mat
tests/models/swalmen_tunnel/: DSM_Swalmen_Unsequenced.csv  DSM_Swalmen_labels.csv  swalmen_tunnel.groupinfo.mat  swalmen_tunnel.nodes.csv  swalmen_tunnel.plants_and_requirements.cif  swalmen_tunnel.prodsysmap.txt  swalmen_tunnel.scheduleorder.mat  swalmen_tunnel_DSM.mat
tests/simple_lock/model/: simple_lock.plants_and_requirements.cif
tests/simple_lock/test_genetic/: test_script.py
